[package]
name = "look-how-they-truncated-my-boy"
description = "Puzzle simulation"
version = "0.1.0"
edition = "2021"
authors = ["Charles Taylor <charlestaylor95@gmail.com>"]
license = "MIT"
repository = "https://github.com/CharlesTaylor7/look-how-they-truncated-my-boy"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
