[package]
name = "look-how-they-truncated-my-boy"
description = "Puzzle simulation"
version = "0.1.0"
edition = "2021"
authors = ["Charles Taylor <charlestaylor95@gmail.com>"]
license = "MIT"
repository = "TODO"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
gl_matrix = "0.0.2"

[dependencies.web-sys]
version = "0.3.69"
features = [
  'console',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'KeyboardEvent',
  'WebGlBuffer',
  'WebGlUniformLocation',
  'WebGlVertexArrayObject',
  'WebGlRenderingContext',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
]
